--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
+    "axios": "^1.12.2",
     "lucide-vue-next": "^0.545.0",
+    "mapbox-gl": "^3.15.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
