--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
     "lucide-vue-next": "^0.545.0",
     "mapbox-gl": "^3.15.0",
+    "pinia": "^3.0.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
