--- a/package.json
+++ b/package.json
@@ -11,19 +11,18 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.5",
     "axios": "^1.13.2",
-    "chart.js": "^4.4.0",
+    "chart.js": "^4.5.1",
     "lucide-vue-next": "^0.545.0",
     "mapbox-gl": "^2.15.0",
     "pinia": "^3.0.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
-    "vue": "3.4.27",
-    "vue-chartjs": "^5.2.0",
+    "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "5.0.4",
-    "vite": "5.2.10"
+    "@vitejs/plugin-vue": "^6.0.1",
+    "vite": "^7.1.7"
   }
 }
