fix: route production delete http

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VITE_API_URL="http://20.81.154.140:5152/api/v1"
+VITE_API_URL="api/v1"
 
 # BOUNDED CONTEXT NEUROLOGICAL HEALTH
 VITE_NEURO_ASSESSMENT_ENDPOINT="/neuro-assessment/patient"
